[package]
name = "rust-phash"
version = "0.1.0"
authors = ["Micah Snyder <micasnyd@cisco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
img_hash = {path="../img_hash"}
clap = "3.0.0-beta.2"
anyhow = "1.0.40"
